updated webpack build
Signed-off-by: Joel Woods <joel@miaem.com>

--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   "author": "Joel Woods",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
     "bootstrap-sass": "^3.3.7",
     "clean-webpack-plugin": "^0.1.16",
+    "compass-mixins": "^0.12.10",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
@@ -22,7 +28,8 @@
     "node-sass": "^4.5.3",
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
-    "resolve-url-loader": "^2.1.0",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
     "sass-lint": "^1.11.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
