--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sierpinski-triangle-explorer",
+  "name": "webpack-d3-bootstrap-sass-starter",
   "version": "1.0.0",
-  "description": "Sierpinski triangle explorer using pan and zoom",
+  "description": "Webpack d3 bootstrap sass starter project",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --env.dest=dev --progress --inline",
@@ -13,19 +13,26 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.0",
     "bootstrap-sass": "^3.3.7",
     "clean-webpack-plugin": "^0.1.16",
     "compass-mixins": "^0.12.10",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.7",
+    "d3": "^4.10.2",
+    "eslint": "^3.19.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.4.2",
     "imagemin-webpack-plugin": "^1.5.2",
     "node-sass": "^4.5.3",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.6",
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
     "purify-css": "^1.2.5",
